<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">语音记事本</string>
    <string name="day_week_01">日</string>
    <string name="day_week_02">一</string>
    <string name="day_week_03">二</string>
    <string name="day_week_04">三</string>
    <string name="day_week_05">四</string>
    <string name="day_week_06">五</string>
    <string name="day_week_07">六</string>

    <string-array name="tab_titles">
        <item>记事列表</item>
        <item>日历</item>
        <item>新增记事</item>
    </string-array>

    <string name="today">今天</string>
    <string name="press_to_speak">长按录制记事本内容</string>
    <string name="record_short">您录制的时间过短，请重新录制！</string>
    <string name="save">保存记事</string>
    <string name="speak_clock">语音录制提醒</string>
    <string name="clock_time">提醒时间：</string>
    <string name="speak_clock_tip">温馨提示：\n  1 此功能需要联网使用。\n  2 中等语速可增加识别成功率。\n  3 “闹钟”，“提醒”等具有定时意义的词语亦会增加识别的成功率。\n    例如：\n    明天早上八点半提醒我！ \n    国庆节下午12点的闹钟！</string>
    <string name="select_clock">选择提醒</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="confirm">确定</string>
    <string name="select_time_lager">提醒时间须大于当前时间！</string>
    <string name="record_clock">录制提醒时间</string>
    <string name="not_understand">没听明白,能重复下吗?</string>
    <string name="cur_clock">提醒时间：%1$s</string>
    <string name="stop_alarm">停止闹钟</string>

</resources>