<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/line_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <com.wjd.speechnotepad.widget.TimerView
            android:id="@+id/timer_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <Button
            android:id="@+id/btn_press_2_speak"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_background"
            android:text="@string/press_to_speak"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/press_to_speak"
            android:src="@drawable/ic_audio" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ic_audio_bg"
        android:gravity="right|center_vertical"
        android:minWidth="96dp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <Button
            android:id="@+id/btn_speech_add_clock"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:drawableRight="@drawable/ic_clock"
            android:paddingRight="10dp"
            android:text="@string/speak_clock"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_add_clock"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:drawableRight="@drawable/ic_clock"
            android:paddingRight="10dp"
            android:text="@string/select_clock"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_clock"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:textSize="16sp" />

</LinearLayout>