<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fg_color"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_last_month"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:background="@drawable/trans_background"
            android:drawableLeft="@drawable/ic_backward"
            android:gravity="center"
            android:text="Button"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/ic_gray_point" />

        <TextView
            android:id="@+id/tv_cur_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Medium Text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/ic_gray_point" />

        <Button
            android:id="@+id/btn_next_month"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:background="@drawable/trans_background"
            android:drawableRight="@drawable/ic_forward"
            android:gravity="center"
            android:text="Button"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </TableRow>

    <LinearLayout
        android:id="@+id/line_week_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/ic_gray_point" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_gray_point" />

                <TextView
                    android:id="@+id/tv_week_01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/day_week_01"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_gray_point" />

            <TextView
                android:id="@+id/tv_week_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day_week_02"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_gray_point" />

            <TextView
                android:id="@+id/tv_week_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day_week_03"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_gray_point" />

            <TextView
                android:id="@+id/tv_week_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day_week_04"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_gray_point" />

            <TextView
                android:id="@+id/tv_week_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day_week_05"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_gray_point" />

            <TextView
                android:id="@+id/tv_week_06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day_week_06"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_gray_point" />

            <TextView
                android:id="@+id/tv_week_07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day_week_07"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_gray_point" />
        </TableRow>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/ic_gray_point" />
    </LinearLayout>

    <GridView
        android:id="@+id/gd_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@color/lst_cache_color"
        android:listSelector="@drawable/trans_background"
        android:numColumns="7" >
    </GridView>

</LinearLayout>